[metadata]
name = myr.common
author = Vnet a.s.
author-email = sap@vnet.sk
summary = Common module for all myrstack parts
description-file = README.rst
home-page = https://github.com/Vnet-as/myr-common
license = MIT
classifier =
    Development Status :: 2 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    rpc
    amqp
    discovery
    announce
[files]
packages =
    myr
    myr.common
namespace_packages =
    myr
